no se lo que esto haciendo

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /XcapeAppV3/nbproject/private/
 /XcapeAppV3/build/
 /XcapeAppV3/dist/
+/XcapeApp/build/
+/XcapeApp/dist/
+/XcapeApp/nbproject/private/
