--- a/XcapeApp/nbproject/project.properties
+++ b/XcapeApp/nbproject/project.properties
@@ -34,13 +34,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.46-bin.jar=mysql-connector-java-5.1.46-bin.jar
+file.reference.WeatherLibrary.jar=/Users/javiersancerninozaleda/Downloads/WeatherLibrary.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.WeatherLibrary.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
