--- a/XcapeApp/nbproject/project.properties
+++ b/XcapeApp/nbproject/project.properties
@@ -33,8 +33,11 @@ dist.jar=${dist.dir}/XcapeApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.dom4j-1.6.1.jar=dom4j-1.6.1.jar
+file.reference.jaxen-1.1.1.jar=jaxen-1.1.1.jar
 file.reference.mysql-connector-java-5.1.46-bin.jar=mysql-connector-java-5.1.46-bin.jar
 file.reference.WeatherLibrary.jar=/Users/javiersancerninozaleda/Downloads/WeatherLibrary.jar
+file.reference.WeatherLibrary.jar-1=WeatherLibrary.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -42,7 +45,10 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.WeatherLibrary.jar}
+    ${file.reference.WeatherLibrary.jar}:\
+    ${file.reference.WeatherLibrary.jar-1}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.jaxen-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
